# e-learning-api

./: .dockerignore  .env.template  .gitignore  API.md  CLAUDE.md  Dockerfile  README.md  convert_videos.py  docker-compose.yaml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 2891aa40ea28_init.py  2b33fac8cbc3_add_formation.py  de79e5d9a7b2_init.py
docker/: Dockerfile
poc/: miniature-mp4.py
src/: __init__.py  config.py
src/api/: __main__.py  fastapi_app.py
src/api/middleware/: __init__.py  auth.py
src/api/router/: auth.py  formations.py  notes.py  progress.py  user.py  videos.py
src/crud/: formation.py  note.py  progress.py  user.py
src/database/: __init__.py
src/database/models/: __init__.py  formation.py  note.py  progress.py  user.py
src/database/schemas/: auth.py  catalog.py  note.py  progress.py  summary.py  user.py
src/exceptions/: auth.py  formation.py  user.py  video.py
src/scripts/: MIGRATION_VIDEO_IDS.md  convert_videos.py  migrate_video_ids.py  resume.py  transcribe.py
src/services/: catalog.py  summary.py  transcription.py
tests/integration/: test_route_user.py
tests/unit/: test_crud_user.py
