[project]
name = "e-learning-api"
dynamic = ["version"]
description = "API for the E-Learning platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "click>=8.3.2",
    "fastapi>=0.135.3",
    "ffmpeg-python>=0.2.0",
    "hypercorn>=0.18.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
ai = [
    "openai>=2.30.0",
    "openai-whisper>=20250625",
]
dev = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "setuptools-scm>=10.0.5",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/_version.py"
