[project]
name = "e-learning-api"
dynamic = ["version"]
description = "API for the E-Learning platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "click>=8.4.0",
    "fastapi>=0.136.1",
    "ffmpeg-python>=0.2.0",
    "hypercorn>=0.18.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
ai = [
    "openai>=2.37.0",
    "openai-whisper>=20250625",
]
dev = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "setuptools-scm>=10.0.5",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/_version.py"
